tests/error/comptime/range_subscript_bounds_check26.bz
// error: negative begin index -2 in range subscript for an array of size 10
// note: while evaluating expression at compile time
// error: negative end index -1 in range subscript for an array of size 10
// note: while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let a = [10: i32]();
		let a = a[..];
		a[-2i32..-1i32];
	});
}
